--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,11 @@ services:
     mem_limit: 7488m
     environment:
       JAVA_TOOL_OPTIONS: >-
-        -Dencryption.keystore.type=JCEKS
-        -Dencryption.cipherAlgorithm=DESede/CBC/PKCS5Padding
-        -Dencryption.keyAlgorithm=DESede
+        -Dencryption.keystore.type=PKCS12
         -Dencryption.keystore.location=/usr/local/tomcat/shared/classes/alfresco/extension/keystore/keystore
         -Dmetadata-keystore.password=${KEYSTORE_PASSWORD}
         -Dmetadata-keystore.aliases=${KEYSTORE_ALIAS}
         -Dmetadata-keystore.metadata.password=${KEYSTORE_KEYPASSWORD}
-        -Dmetadata-keystore.metadata.algorithm=DESede
       JAVA_OPTS: >-
         -Ddb.username=${DB_USERNAME}
         -Ddb.password=${DB_PASSWORD}
@@ -75,6 +72,7 @@ services:
     volumes:
       - alf-repo-data:/usr/local/tomcat/alf_data
       - alf-repo-logs:/usr/local/tomcat/logs
+      - ${KEYSTORE_HOST_PATH}:/usr/local/tomcat/shared/classes/alfresco/extension/keystore:ro
 
   transform-core-aio:
     image: alfresco/alfresco-transform-core-aio:${TRANSFORM_ENGINE_TAG}
@@ -163,7 +161,7 @@ services:
       SOLR_ALFRESCO_HOST: "alfresco"
       SOLR_ALFRESCO_PORT: "8080"
       #Alfresco needs to know how to call solr
-      SOLR_SOLR_HOST: "solr6"
+      SOLR_SOLR_HOST: "alfresco_search"
       SOLR_SOLR_PORT: "8983"
       #Create the default alfresco and archive cores
       SOLR_CREATE_ALFRESCO_DEFAULTS: "alfresco,archive"
