--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -10,11 +10,14 @@ services:
     mem_limit: 7488m
     environment:
       JAVA_TOOL_OPTIONS: >-
-        -Dencryption.keystore.type=PKCS12
+        -Dencryption.keystore.type=JCEKS
+        -Dencryption.cipherAlgorithm=DESede/CBC/PKCS5Padding
+        -Dencryption.keyAlgorithm=DESede
         -Dencryption.keystore.location=/usr/local/tomcat/shared/classes/alfresco/extension/keystore/keystore
-        -Dmetadata-keystore.password=${KEYSTORE_PASSWORD}
-        -Dmetadata-keystore.aliases=${KEYSTORE_ALIAS}
-        -Dmetadata-keystore.metadata.password=${KEYSTORE_KEYPASSWORD}
+        -Dmetadata-keystore.password=mp6yc0UD9e
+        -Dmetadata-keystore.aliases=metadata
+        -Dmetadata-keystore.metadata.password=oKIWzVdEdA
+        -Dmetadata-keystore.metadata.algorithm=DESede
       JAVA_OPTS: >-
         -Ddb.username=${DB_USERNAME}
         -Ddb.password=${DB_PASSWORD}
@@ -69,7 +72,6 @@ services:
     volumes:
       - alf-repo-data:/usr/local/tomcat/alf_data
       - alf-repo-logs:/usr/local/tomcat/logs
-      - ${KEYSTORE_HOST_PATH}:/usr/local/tomcat/shared/classes/alfresco/extension/keystore:ro
 
   transform-core-aio:
     image: alfresco/alfresco-transform-core-aio:${TRANSFORM_ENGINE_TAG}
