--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -6,7 +6,8 @@ services:
         ALFRESCO_TAG: ${ALFRESCO_CE_TAG}
         DB: postgres
         SOLR_COMMS: secret
-    container_name: alfresco_repository
+    ports:
+      - "8080:8080"
     mem_limit: 7488m
     environment:
       JAVA_TOOL_OPTIONS: >-
@@ -69,12 +70,13 @@ services:
     volumes:
       - alf-repo-data:/usr/local/tomcat/alf_data
       - alf-repo-logs:/usr/local/tomcat/logs
-      - ${KEYSTORE_HOST_PATH}:/usr/local/tomcat/shared/classes/alfresco/extension/keystore:ro
-      - ./alfresco/webscripts:/usr/local/tomcat/shared/classes/alfresco/extension/templates/webscripts/custom
+      # - ${KEYSTORE_HOST_PATH}:/usr/local/tomcat/shared/classes/alfresco/extension/keystore:ro
+      - alfresco-keystore:/usr/local/tomcat/shared/classes/alfresco/extension/keystore:ro
+      # - ./alfresco/webscripts:/usr/local/tomcat/shared/classes/alfresco/extension/templates/webscripts/custom
+      - alfresco-webscripts:/usr/local/tomcat/shared/classes/alfresco/extension/templates/webscripts/custom
 
   transform-core-aio:
     image: alfresco/alfresco-transform-core-aio:${TRANSFORM_ENGINE_TAG}
-    container_name: alfresco_core_aio
     restart: on-failure
     mem_limit: 2048m
     environment:
@@ -100,13 +102,14 @@ services:
         SHARE_TAG: ${SHARE_TAG}
         SERVER_NAME: ${SERVER_NAME}
         HTTP_PORT: 8080
-    container_name: alfresco_share
+    ports:
+      - "8081:8080"
     mem_limit: 1872m
     environment:
       REPO_HOST: "alfresco"
       REPO_PORT: "8080"
-      CSRF_FILTER_REFERER: "http://localhost:8080/.*"
-      CSRF_FILTER_ORIGIN: "http://localhost:8080"
+      CSRF_FILTER_REFERER: "http://${SERVER_NAME}:.*/.*"
+      CSRF_FILTER_ORIGIN: "http://${SERVER_NAME}:*"
       JAVA_OPTS: >-
         -Dalfresco.context=alfresco
         -Dalfresco.protocol=http
@@ -127,7 +130,6 @@ services:
         ALFRESCO_COMMS: secret
         CROSS_LOCALE: "true"
         DISABLE_CONTENT_INDEXING: "false"
-    container_name: alfresco_search
     mem_limit: 3744m
     environment:
       SOLR_JAVA_MEM: "-XX:MinRAMPercentage=50 -XX:MaxRAMPercentage=80"
@@ -150,7 +152,6 @@ services:
 
   activemq:
     image: alfresco/alfresco-activemq:${ACTIVEMQ_TAG}
-    container_name: alfresco_activemq
     mem_limit: 1g
     environment:
       ACTIVEMQ_ADMIN_LOGIN: ${ACTIVEMQ_ADMIN_LOGIN}
@@ -160,29 +161,12 @@ services:
 
   transform-ocr:
     image: angelborroy/alfresco-tengine-ocr:2.0.0
-    container_name: alfresco_transform_ocr
     mem_limit: 1536m
     environment:
       JAVA_OPTS: >-
         -XX:MinRAMPercentage=50 -XX:MaxRAMPercentage=80
         -Dserver.tomcat.threads.max=4
         -Dserver.tomcat.threads.min=1
-
-  # HTTP proxy to provide HTTP Default port access to services
-  # SOLR API and SOLR Web Console are protected to avoid unauthenticated access
-  # proxy:
-  #   image: nginx:stable-alpine
-  #   container_name: alfresco_proxy
-  #   mem_limit: 128m
-  #   depends_on:
-  #     - alfresco
-  #     - solr6
-  #     - share
-  #   volumes:
-  #     - ./config/nginx.conf:/etc/nginx/nginx.conf
-  #     - ./config/nginx.htpasswd:/etc/nginx/conf.d/nginx.htpasswd
-  #   ports:
-  #     - ${BIND_IP_NGINX:-0.0.0.0}:8080:8080
 
 volumes:
   alf-repo-data:
