update: volumes persistentes do alfresco

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -70,10 +70,10 @@ services:
     volumes:
       - alf-repo-data:/usr/local/tomcat/alf_data
       - alf-repo-logs:/usr/local/tomcat/logs
-      # - ${KEYSTORE_HOST_PATH}:/usr/local/tomcat/shared/classes/alfresco/extension/keystore:ro
-      - alfresco-keystore:/usr/local/tomcat/shared/classes/alfresco/extension/keystore:ro
-      # - ./alfresco/webscripts:/usr/local/tomcat/shared/classes/alfresco/extension/templates/webscripts/custom
-      - alfresco-webscripts:/usr/local/tomcat/shared/classes/alfresco/extension/templates/webscripts/custom
+      - /opt/alfresco/keystore:/usr/local/tomcat/shared/classes/alfresco/extension/keystore:ro
+      # - alfresco-keystore:/usr/local/tomcat/shared/classes/alfresco/extension/keystore:ro
+      - /opt/alfresco/webscripts:/usr/local/tomcat/shared/classes/alfresco/extension/templates/webscripts/custom
+      # - alfresco-webscripts:/usr/local/tomcat/shared/classes/alfresco/extension/templates/webscripts/custom
 
   transform-core-aio:
     image: alfresco/alfresco-transform-core-aio:${TRANSFORM_ENGINE_TAG}
